<resources>
    <string name="app_name">Administrador</string>
    <string name="title_activity_admin">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_manter_admin">Manter administradores</string>
    <string name="menu_manter_prof">Manter professores</string>
    <string name="menu_manter_curso">Manter cursos</string>
    <string name="menu_manter_grades">Manter grades</string>
    <string name="menu_enviar_mensagem">Enviar mensagem</string>
    <string name="menu_cadastrar_turmas">Cadastrar turmas novas</string>


    <string name="Entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
</resources>
