<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/manter_admin"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_manter_admin" />
        <item
            android:id="@+id/manter_professor"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_manter_prof" />
        <item
            android:id="@+id/manter_curso"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_manter_curso" />
        <item
            android:id="@+id/manter_grades"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_manter_grades" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/admin_mensagem"
                android:icon="@android:drawable/sym_action_chat"
                android:title="@string/menu_enviar_mensagem" />
            <item
                android:id="@+id/admin_turma"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_vizualizar_acoes" />
        </menu>
    </item>

</menu>
